[package]
name = "kantei-android"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.0"
license = "MIT"
authors = ["pleme-io"]
repository = "https://github.com/pleme-io/kantei-android"
description = "ADB transport and GrapheneOS compliance profiles for kantei"

[dependencies]
kantei = { git = "https://github.com/pleme-io/kantei" }
adb_client = "3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1"

[lints.clippy]
pedantic = "warn"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
